# emu68-pcie-library

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  RELEASE-NOTES.md  developer-guide.md  devtree.c  mbox.c  pci-uclass.c  pci_auto.c  pci_auto_common.c  pci_bar.c  pci_common.c  pci_lookup.c  pci_probe.c  pci_util.c  pcie_brcmstb.c  pcie_list.c
.github/workflows/: versioning.yml
bcmpcie.library/: CMakeLists.txt
bcmpcie.library/include/: pcie_private.h
bcmpcie.library/include/libraries/: bcmpcie_errors.h  openpci.h  pci_constants.h  pci_ids.h  pcitags.h
bcmpcie.library/src/: pcie_board.c  pcie_find.c  pcie_io.c  pcie_irq.c  pcie_main.c  pcie_mem.c
cmake/: Emu68PCIeConfig.cmake.in  toolchain.cmake
common/: CMakeLists.txt
common/include/: compat.h  debug.h  mbox.h  minlist.h  msg.h
common/include/clib/: devicetree_protos.h
common/include/proto/: devicetree.h
common/src/: devtree.c  mbox.c  msg.c
include/: compat.h  debug.h  devtree.h  pci.h  pci_auto.h  pci_types.h  pcie_brcmstb.h
lspci/: CMakeLists.txt
lspci/src/: pcie_list.c
openpci.library/: CMakeLists.txt
openpci.library/src/: openpci_end.c  openpci_main.c  openpci_trampolines.S
pcie/: CMakeLists.txt
pcie.library/: CMakeLists.txt
pcie.library/include/: bcm2711.h  pci.h  pci_auto.h  pci_types.h  pcie_brcmstb.h
pcie.library/src/: pci_auto.c  pci_bar.c  pci_capability.c  pci_int.c  pci_io.c  pci_lookup.c  pci_probe.c  pci_util.c  pcie_brcmstb.c  pcie_brcmstb_msi.c  pcie_msi.c  vl805_reset.c
pcie/include/: bcm2711.h  pci.h  pci_auto.h  pci_bar.h  pci_capability.h  pci_int.h  pci_io.h  pci_irq.h  pci_lookup.h  pci_msi.h  pci_msix.h  pci_probe.h  pci_types.h  pci_util.h  pcie_brcmstb.h
pcie/src/: pci_auto.c  pci_bar.c  pci_capability.c  pci_int.c  pci_io.c  pci_irq.c  pci_lookup.c  pci_probe.c  pci_util.c  pcie_brcmstb.c  pcie_brcmstb_msi.c  pcie_msi.c  pcie_msix.c  vl805_reset.c
sfd/: bcmpcie.sfd
